# karlbruder_monorepo

./: .env.production  README.md  compose.yml
.github/workflows/: ci-landing.yml  deploy-landing.yml
backend/: Dockerfile  README.md  database.py  main.py  pyproject.toml
frontend/: .env.exemple  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Banner.js  Partner.js
frontend/src/config/: cognito.tsx
frontend/src/fonts/: icomoon.eot
frontend/src/pages/: Health.tsx  Home.tsx  Landing.tsx
landing/: .gitignore  package-lock.json  package.json
landing/public/: index.html
landing/src/: App.js  icomoon.css  index.js
landing/src/components/: About.js  Banner.js  Contact.js  Footer.js  Gallery.js  Header.js  LanguageContext.js  MapsLink.js  Partner.js  Training.js  Translations.js  Weapons.js  index.js
src/: App.js
src/components/: Header.js  index.js
