[tool.poetry]
name = "karlbruder-backend"
version = "0.1.0"
description = "Karlbruder backend API"
authors = ["Karlbruder Team"]
readme = "README.md"
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.27" }
gunicorn = "^21.2"

# Database
psycopg = "^3.1"
sqlalchemy = "^2.0"
alembic = "^1.13"

# Config
python-dotenv = "^1.0"
pydantic-settings = "^2.2"
pandas = "^3.0.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
black = "^24.2"
ruff = "^0.3"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
